--- a/Simple Style.css
+++ b/Simple Style.css
@@ -2,8 +2,7 @@ body {
     font-family: sans-serif;
 }
 .product {
-    border-width: 5px;
-    border-color: black;
+    border: 5px solid black;
 }
 .name {
     text-align: center;
