--- a/Simple Style.css
+++ b/Simple Style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 .container {
     width: 825px;
     margin: 0 auto;
@@ -6,6 +10,9 @@ body {
     font-family: sans-serif;
     line-height: 1.4;
 }
+p {
+    margin-bottom: 10px;
+}
 .product {
     border: 5px solid black;
 }
@@ -13,6 +20,8 @@ body {
     text-align: center;
     background-color: rgb(221, 219, 219);
     text-transform: uppercase;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .price {
     font-size: 30px;
@@ -22,18 +31,29 @@ body {
     text-transform: uppercase;
     font-weight: bold;
     color: #777;
+    margin-bottom: 20px;
 }
-.more-info:link, .more-info:visited {
+.more-info {
+    margin-bottom: 40px;
+}
+.more-info:link,
+.more-info:visited {
     color: black;
 }
-.more-info:hover, .more-info:active {
+.more-info:hover,
+.more-info:active {
     text-decoration: none;
 }
 .details-title {
     text-transform: uppercase;
+    margin-bottom: 15px;
 }
 .details-list {
     list-style: square;
+    margin-left: 20px;
+}
+li {
+    margin-bottom: 10px;
 }
 .add-cart {
     background-color: black;
@@ -41,10 +61,12 @@ body {
     font-size: 20px;
     text-transform: uppercase;
     border: none;
-    cursor:pointer;
+    cursor: pointer;
+    width: 100%;
+    height: 40px;
+    border-top: 5px solid black;
 }
 .add-cart:hover {
     background-color: white;
     color: black;
-    border: none;
 }
