--- a/Simple Style.css
+++ b/Simple Style.css
@@ -47,6 +47,7 @@ p {
 .details-title {
     text-transform: uppercase;
     margin-bottom: 15px;
+    margin-top: 40px;
 }
 .details-list {
     list-style: square;
