--- a/Simple Style.css
+++ b/Simple Style.css
@@ -49,10 +49,29 @@ body {
 .more-info:active {
     text-decoration: none;
 }
+.colors {
+    margin: 30px 10px;
+}
+.colors-red {
+    background-color: red;
+    padding: 10px;
+    margin-right: 10px;
+    display: inline-block;
+}
+.colors-blue {
+    background-color: blue;
+    padding: 10px;
+    margin-right: 10px;
+    display: inline-block;
+}
+.colors-yellow {
+    background-color: yellow;
+    padding: 10px;
+    display: inline-block;
+}
 .details-title {
     text-transform: uppercase;
     margin-bottom: 15px;
-    margin-top: 40px;
 }
 .details-list {
     list-style: square;
