--- a/Simple Style.css
+++ b/Simple Style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     font-family: sans-serif;
@@ -8,7 +9,7 @@ body {
 }
 .product {
     border: 5px solid black;
-    width: 825px;
+    width: 830px;
     margin: 50px auto;
     position:relative;
 }
@@ -32,6 +33,7 @@ body {
 }
 .price {
     font-size: 30px;
+    float: left
 }
 .delivery {
     font-size: 12px;
@@ -39,6 +41,11 @@ body {
     font-weight: bold;
     color: #777;
     margin-bottom: 20px;
+    margin-top: 12px;
+    float: right;
+}
+.delivery-details {
+    clear: both;
 }
 .more-info {
     margin-bottom: 40px;
@@ -54,7 +61,7 @@ body {
     text-decoration: none;
 }
 .colors {
-    margin-left: 10px;
+    /* margin-left: 10px; */
     margin-bottom: 30px;
 }
 .color {
@@ -99,4 +106,20 @@ body {
 .add-cart:hover {
     background-color: white;
     color: black;
+}
+
+.product-image {
+    float: left;
+    width: 250px;
+}
+.selling {
+    float: left;
+    margin-left: 40px;
+    margin-top: 20px;
+    width: 250px;
+}
+.details {
+    float: right;
+    width: 250px;
+    margin-top: 25px;
 }
