create flex container

--- a/Simple Style With Flexbox.css
+++ b/Simple Style With Flexbox.css
@@ -105,7 +105,9 @@ body {
     background-color: white;
     color: black;
 }
-
+.container {
+    display: flex;
+}
 .product-image {
     width: 250px;
 }
