--- a/Simple Style With Flexbox and CSS Grid.css
+++ b/Simple Style With Flexbox and CSS Grid.css
@@ -13,8 +13,8 @@ body {
     margin: 50px auto;
     position: relative;
     display: grid;
-    grid-template-columns: 250px 250px 250px;
-    column-gap: 35px;
+    grid-template-columns: 250px 1fr 1fr;
+    column-gap: 40px;
 }
 .sale {
     background-color: red;
